Section 1 is complete

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
 <body>
     <header> 
-        <div id="a1">Welcome the financial Services Consultency</div>
-        <div id="a2">
+        <div id="h1">
+            <h4>Welcome the financial Services Consultency</h4>
+        </div>
+        <div id="h2">
             <select name="language" id="language">
                 <option value="english"> English</option>
                 <option value="hindi">Hindi</option>
@@ -24,5 +26,41 @@
             <button  type="button" id="quote">Get A Quote</button>
         </div>
     </header>
+
+    <section>
+        <div id="s1">
+            <a href="index.html" rel="home">
+                <img src="image.png" alt="logo img" height="80px" width="200px"> 
+            </a>
+            </div>
+
+        <div id="s2">
+            <div class="icon">
+                <i class="fa-solid fa-phone" ></i>
+            </div>
+            <div class="text">
+                <h5>001-1234-888888</h5>
+                <p>info.consultency@gmail.com</p>
+            </div>
+        
+            <div class="icon">
+                <i class="fa-solid fa-location-dot"></i>
+            </div>
+
+            <div class="text">
+                <h5>48 Batra Street </h5>
+                <p>Bangalore India</p>
+            </div>
+
+            <div class="icon">
+                <i class="fa-solid fa-clock"></i>
+            </div>
+
+            <div class="text">
+                <h5>8:00 Am - 9:00 Pm </h5>
+                <p>Monday TO Saturday</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
