--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section>
         <div id="s1">
             <a href="index.html" rel="home">
-                <img src="image.png" alt="logo img" height="80px" width="200px"> 
+                <img src="image.jpg" alt="logo img" height="80px" width="200px"> 
             </a>
             </div>
 
@@ -62,5 +62,27 @@
             </div>
         </div>
     </section>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Pages</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Contact</a></li>
+            <div id="navicon">
+                <a href="#">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                </a>
+            </div> 
+        </ul> 
+           
+    </nav>
 </body>
 </html>
