some work on main saction

--- a/index.html
+++ b/index.html
@@ -81,8 +81,19 @@
                     <i class="fa-solid fa-cart-shopping"></i>
                 </a>
             </div> 
-        </ul> 
-           
+        </ul>   
     </nav>
+
+    <main>
+        <h2>Communication is the key <br>for any Global Business</h2><br><br>
+        <a href="#">
+            <button type="button" id="abtbtn">About Us</button>
+        </a>
+
+        <a href="#">
+            <button type="button" id="ousbtn">Our Services</button>
+        </a>
+        
+    </main>
 </body>
 </html>
