Completed multiple sections

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                 <option value="hindi">Hindi</option>
             </select>
             <div id="social">
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-square-x-twitter"></i>
-                <i class="fa-solid fa-globe"></i>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a href="#"><i class="fa-solid fa-globe"></i></a>
             </div>
             <button  type="button" id="quote">Get A Quote</button>
         </div>
@@ -126,7 +126,124 @@
                 <p>Get the guidance you deserve from the comfort of your home. Our online consulting services connect you with industry specialists for focused solutions, tailored to your specific needs. Take control of your goals – schedule a consultation today.</p>
             </div>
         </div>
-    </section2>
+    </section2><br><br>
+
+    <div id="section3">
+
+        <div id="div1_s3">
+            <h2>We advise you, you call the right decision!</h2>
+            <h3>We help entrepreneurs get their act together before they talk to investors.</h3> 
+        </div>
+
+        <div id="div2_s3">
+            <div class="icon_s3">
+                <i class="fa-solid fa-chart-pie"></i>
+                <h1>90</h1>
+                <h5>Company Consulted</h5>
+            </div>
+            <div class="icon_s3">
+                <i class="fa-solid fa-headset" id="headphone"></i>
+                <h1>120</h1>
+                <h5>Consultents</h5>
+            </div>
+            <div class="icon_s3">
+                <i class="fa-solid fa-book-bookmark" id="bookmark"></i>
+                <h1>50</h1>
+                <h5>Awards Winning</h5>
+            </div>
+            <div class="icon_s3">
+                <i class="fa-solid fa-heart-pulse"></i>
+                <h1>240</h1>
+                <h5>Satisfied Customers</h5>
+            </div>
+
+        </div>
+    </div><br>
+
+    <div id="section4">
+        <h1 >Our Industries</h1>
+        <div id="line"></div><br>
+        <div id="data_s4">
+            <div class="s4">
+              <div class="iconbg">
+                <i class="fa-solid fa-chart-pie"></i>
+              </div> 
+              <h3>Corporate Finance</h3> 
+              <p>Corporate finance is the backbone of a business, ensuring its financial health and growth. It encompasses how companies raise capital, allocate resources, and make strategic decisions to maximize shareholder value.</p>
+            </div>
+            <div class="s4">
+                <div class="iconbg">
+                    <i class="fa-solid fa-chart-simple"></i>
+                </div>
+                <h3>Economic Consulting</h3> 
+                <p>Navigate complex economic challenges with our expert guidance. We provide advanced economic, financial, and statistical analysis to inform strategic decision-making across a wide range of industries.</p> 
+            </div>
+            <div class="s4">
+                <div class="iconbg">
+                    <i class="fa-solid fa-bell"></i>
+                </div> 
+                <h3>Forensic & Litigaation</h3> 
+                <p>Forensic & Litigation practice provides comprehensive support for complex legal matters. We combine forensic investigation, data analysis, and expert witness services.</p>
+            </div>
+            <div class="s4">
+                <div class="iconbg">
+                    <i class="fa-regular fa-chess-rook"></i>
+                </div> 
+                <h3>Strategic Communications</h3> 
+                <p>Strategic communication helps you craft targeted messages that resonate with your audience,  build relationships, and drive positive outcomes. We have the expertise to help you communicate effectively.</p>
+            </div>
+            <div class="s4">
+                <div class="iconbg">
+                    <i class="fa-solid fa-computer"></i>
+                </div> 
+                <h3>Technology Consulting</h3> 
+                <p>We are technology consultants who help organizations identify and implement the right tech solutions to achieve their strategic goals. From cloud migration to cybersecurity, we offer a wide range of services.</p>
+            </div>
+            <div class="s4">
+                <div class="iconbg">
+                    <i class="fa-solid fa-suitcase-medical"></i>
+                </div> 
+                <h3>Healthcare Consulting</h3> 
+                <p>e provide expert consulting services to hospitals, clinics, insurers, and other healthcare providers. Our focus is on improving efficiency, optimizing operations, and delivering better patient care.</p>
+            </div>
+        </div>
+
+    </div>
+
+    <div id="section5">
+        <h1>Meet Our Team</h1>
+        <h4>We are here to Accelerate business and help you finf the way.</h4>
+        <div id="photos">
+            <div class="idcard">
+                <img src="i1.png">
+                <div id="name1">
+                    <h3>Gloria Harriet</h3>
+                    <p>Tax Advisor</p>
+                </div>
+            </div>
+            <div class="idcard">
+                <img src="i2.png">
+                <div id="name1">
+                    <h3>Jackman Nash</h3>
+                    <p>Cunsultor</p>
+                </div>
+            </div>
+            <div class="idcard">
+                <img src="i3.png">
+                <div id="name1">
+                    <h3>Ollie Schneider</h3>
+                    <p>Business Advisor</p>
+                </div>
+            </div>
+            <div class="idcard">
+                <img src="i4.png">
+                <div id="name1">
+                    <h3>Roger West</h3>
+                    <p>Financer</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
