--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header> 
         <div id="h1">
-            <h4>WELCOME the financial Services Consultency</h4>
+            <h4>Welcome the financial Services Consultency</h4>
         </div>
         <div id="h2">
             <select name="language" id="language">
