--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section>
         <div id="s1">
             <a href="index.html" rel="home">
-                <img src="S:\Project 1 HTML and CSS\Img\image.jpg" alt="logo img" height="80px" width="200px"> 
+                <img src="Img/image.jpg" height="80px" width="200px"> 
             </a>
             </div>
 
@@ -215,28 +215,28 @@
         <h4>We are here to Accelerate business and help you finf the way.</h4>
         <div id="photos">
             <div class="idcard">
-                <img src="S:\Project 1 HTML and CSS\Img\i1.png">
+                <img src="Img/i1.png">
                 <div id="name1">
                     <h3>Gloria Harriet</h3>
                     <p>Tax Advisor</p>
                 </div>
             </div>
             <div class="idcard">
-                <img src="S:\Project 1 HTML and CSS\Img\i2.png">
+                <img src="Img/i2.png">
                 <div id="name1">
                     <h3>Jackman Nash</h3>
                     <p>Cunsultor</p>
                 </div>
             </div>
             <div class="idcard">
-                <img src="S:\Project 1 HTML and CSS\Img\i3.png">
+                <img src="Img/i3.png">
                 <div id="name1">
                     <h3>Ollie Schneider</h3>
                     <p>Business Advisor</p>
                 </div>
             </div>
             <div class="idcard">
-                <img src="S:\Project 1 HTML and CSS\Img\i4.png">
+                <img src="Img/i4.png">
                 <div id="name1">
                     <h3>Roger West</h3>
                     <p>Financer</p>
