cursor style changed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#"><i class="fa-brands fa-square-x-twitter"></i></a>
                 <a href="#"><i class="fa-solid fa-globe"></i></a>
             </div>
-            <button  type="button" id="quote">Get A Quote</button>
+            <a href="#"><button  type="button" id="quote">Get A Quote</button></a>
         </div>
     </header>
 
@@ -190,14 +190,14 @@
                     <i class="fa-regular fa-chess-rook"></i>
                 </div> 
                 <h3>Strategic Communications</h3> 
-                <p>Strategic communication helps you craft targeted messages that resonate with your audience,  build relationships, and drive positive outcomes. We have the expertise to help you communicate effectively.</p>
+                <p>Strategic communication helps you craft targeted messages that resonate with your audience,  build relationships, and drive positive outcomes. </p>
             </div>
             <div class="s4">
                 <div class="iconbg">
                     <i class="fa-solid fa-computer"></i>
                 </div> 
                 <h3>Technology Consulting</h3> 
-                <p>We are technology consultants who help organizations identify and implement the right tech solutions to achieve their strategic goals. From cloud migration to cybersecurity, we offer a wide range of services.</p>
+                <p>We are technology consultants who help organizations identify and implement the right tech solutions to achieve their strategic goals. From cloud migration to cybersecurity.</p>
             </div>
             <div class="s4">
                 <div class="iconbg">
