--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <img src="Img/i2.png">
                 <div id="name1">
                     <h3>Jackman Nash</h3>
-                    <p>Cunsultor</p>
+                    <p>Consultor</p>
                 </div>
             </div>
             <div class="idcard">
@@ -247,8 +247,16 @@
 
     <div id="contactform">
         <h3>Request a Call back.</h3>
-        <p>Would you like to speak to our financial advisors? Just submit your contact deatails<br>We will be in touch shortly. You can also emial us if you prefer that type of communication.</p>
+        <p>Would you like to speak to our financial advisors? Just submit your contact deatails<br>We will be in touch shortly. You can also emial us if you prefer that type of communication.</p><br>
         <div id="form">
+            <select name="help" id="help1">
+                <option value="How"> How we can help you</option>
+                <option value="finance">In Finance</option>
+                <option value="Tax Advisor">In Tax Advise</option>
+            </select>
+            <input type="text" placeholder="Your Name" id="name" name="username">
+            <input type="number" placeholder="Your Phone number" id="number" name="phone number">
+            <button type="submit"> SUBMIT ></button>
 
         </div>
     </div>
