footer section is completed

--- a/index.html
+++ b/index.html
@@ -255,15 +255,65 @@
                 <option value="Tax Advisor">In Tax Advise</option>
             </select>
             <input type="text" placeholder="Your Name" id="name" name="username">
-            <input type="number" placeholder="Your Phone number" id="number" name="phone number">
-            <button type="submit"> SUBMIT ></button>
-
+            <input type="tel" placeholder="Your Phone number" id="number" name="phone number" maxlength="10">
+            <button type="submit"> SUBMIT</button>
         </div>
     </div>
 
-
-
+    <div id="partners_logo">
+        <img src="Img/logo1 (1).png" alt="partners_logo_img">
+        <img src="Img/logo2.png" alt="partners_logo_img">
+        <img src="Img/logo3.png" alt="partners_logo_img">
+        <img src="Img/logo4.png" alt="partners_logo_img">
+        <img src="Img/logo5.png" alt="partners_logo_img">
+    </div> 
     
+    <footer>
+        <div id="footerlogo_sec">
+            <a href="index.html" rel="home">
+                <img src="Img/logo_rbg.png" height="80px" width="240px"> 
+            </a>
+            <p>We help you create a financial strategy that reflects your personality. Getting to know you is a financial advisor's primary goal. An approach centered around your priorities.</p>
+            <i class="fa-solid fa-location-dot"></i><p id="address">48 Batra StreetBangalore India</p>
+            <i class="fa-solid fa-phone"></i><p class="foo">001-1234-888888</p>
+            <i class="fa-solid fa-envelope"></i><p class="foo">info.consultency@gmail.com</p>
+        </div>
+        <div id="ourlinks">
+            <h3>Our Links</h3>
+            <div id="list">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Pages</a></li>
+                    <li><a href="#">Projects</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">News</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Careers</a></li>
+                </ul>
+        </div>
+        </div>
+        <div id="recent">
+            <h3>Recent News</h3>
+            <i class="fa-solid fa-city"></i>
+            <i class="fa-solid fa-newspaper"></i><br>
+            <p id="p1">Read Here Some Recent News.</p><br><br>
+            <i class="fa-solid fa-city"></i>
+            <i class="fa-solid fa-newspaper"></i><br>
+            <p id="p2">Read Here Some Recent News.</p>
+        </div>
+        <div id="newsletter">
+            <h3>Newsletter</h3>
+            <p>Subscribe our newsletter to get updated about news updated etc.</p><br>
+            <input type="email" placeholder="Enter Your Email" id="emial" name="email"><br><br>
+            <button type="submit">SUBSCRIBE</button>
+        </div>
+    </footer>
+
     
 </body>
 </html>
