--- a/index.html
+++ b/index.html
@@ -314,6 +314,17 @@
         </div>
     </footer>
 
+    <div id="f_end">
+        <div id="copyright"><p>@2007 <span> <a href="#"> Copyright</a></span> &nbsp; All rights reserved.</p></div>
+        <div id="social_icons">
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </div>
+    </div>
+
     
 </body>
 </html>
